--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -474,7 +474,7 @@ tenants:
         vrf_id: 1
       - name: TRANSIT
         vrf_id: 66
-      # Test that a VRF with address_families: [] on a WAN router is not configured on Vxlan1 interface nor BGP
+      # Test that a VRF with address_families: [] on a WAN router is not configured on Vxlan1 interface. Only configured for BGP because we force enabled: True
       - name: NOT-WAN-VRF
         vrf_id: 13
         address_families: []
