ptp datamodel changes to ptp_settings

--- a/ansible_collections/arista/avd/examples/media/group_vars/MEDIA_FABRIC.yml
+++ b/ansible_collections/arista/avd/examples/media/group_vars/MEDIA_FABRIC.yml
@@ -123,7 +123,7 @@ daemon_terminattr:
   taillogs:
 
 # Enable PTP for the entire fabric
-ptp:
+ptp_settings:
   enabled: true
 
 # Underlay multicast (SSM)
