--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-ipv4-labeled-unicast.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-ipv4-labeled-unicast.cfg
@@ -42,7 +42,7 @@ router bgp 65101
       neighbor 198.51.100.1 rcf in RCF_TEST(ARGS)
       neighbor 198.51.100.1 graceful-restart
       neighbor 198.51.100.1 additional-paths send ecmp
-      neighbor 198.51.100.1 maximum-routes 0
+      neighbor 198.51.100.1 maximum-advertised-routes 0
       no neighbor 198.51.100.2 activate
       neighbor 198.51.100.2 route-map RM_OUT_TEST out
       neighbor 198.51.100.2 graceful-restart-helper stale-route route-map RM_STALE
