--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-path-selection.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-path-selection.cfg
@@ -19,10 +19,10 @@ router bgp 65101
    !
    address-family path-selection
       bgp additional-paths receive
-      bgp additional-paths send ecmp limit 42
+      bgp additional-paths send ecmp limit 42 PL1
       neighbor PATH-SELECTION-PG-1 activate
       neighbor PATH-SELECTION-PG-1 additional-paths receive
-      neighbor PATH-SELECTION-PG-1 additional-paths send any
+      neighbor PATH-SELECTION-PG-1 additional-paths send any PL1
       neighbor PATH-SELECTION-PG-2 activate
       neighbor PATH-SELECTION-PG-2 additional-paths send backup
       neighbor PATH-SELECTION-PG-3 activate
@@ -33,7 +33,7 @@ router bgp 65101
       neighbor PATH-SELECTION-PG-5 additional-paths send limit 42
       neighbor 172.31.255.0 activate
       neighbor 172.31.255.0 additional-paths receive
-      neighbor 172.31.255.0 additional-paths send any
+      neighbor 172.31.255.0 additional-paths send any PL1
       neighbor 172.31.255.1 activate
       neighbor 172.31.255.1 additional-paths send backup
       neighbor 172.31.255.2 activate
