--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
@@ -31,12 +31,14 @@ router_bgp:
         receive: true
         send: ecmp
         send_ecmp_limit: 42
+        prefix_list: PL1
     peer_groups:
       - name: PATH-SELECTION-PG-1
         activate: true
         additional_paths:
           receive: true
           send: any
+          prefix_list: PL1
       - name: PATH-SELECTION-PG-2
         activate: true
         additional_paths:
@@ -61,6 +63,7 @@ router_bgp:
         additional_paths:
           receive: true
           send: any
+          prefix_list: PL1
       - ip_address: 172.31.255.1
         activate: true
         additional_paths:
