--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -48,7 +48,7 @@ router bgp 65001
          bgp missing-policy direction out action permit
          bgp additional-paths install ecmp-primary
          bgp additional-paths receive
-         bgp additional-paths send ecmp limit 4
+         bgp additional-paths send ecmp limit 4 PL1
          neighbor 1.2.3.4 activate
          neighbor 1.2.3.4 route-map FOO in
          neighbor 1.2.3.4 route-map BAR out
@@ -116,4 +116,4 @@ router bgp 65001
       redistribute dynamic rcf VRF_RCF_DYNAMIC()
       !
       address-family ipv4
-         bgp additional-paths send ecmp
+         bgp additional-paths send ecmp PL1
