--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-path-selection.yaml
@@ -31,12 +31,14 @@ router_bgp:
         receive: true
         send: ecmp
         send_ecmp_limit: 42
+        prefix_list: PL1
     peer_groups:
       - name: PATH-SELECTION-PG-1
         activate: true
         additional_paths:
           receive: true
           send: any
+          prefix_list: PL1
       - name: PATH-SELECTION-PG-2
         activate: true
         additional_paths:
@@ -48,10 +50,12 @@ router_bgp:
       - name: PATH-SELECTION-PG-4
         activate: true
         additional_paths:
+          send: ecmp
           send_ecmp_limit: 42
       - name: PATH-SELECTION-PG-5
         activate: true
         additional_paths:
+          send: limit
           send_limit: 42
     neighbors:
       - ip_address: 172.31.255.0
@@ -59,6 +63,7 @@ router_bgp:
         additional_paths:
           receive: true
           send: any
+          prefix_list: PL1
       - ip_address: 172.31.255.1
         activate: true
         additional_paths:
@@ -70,8 +75,10 @@ router_bgp:
       - ip_address: 172.31.255.3
         activate: true
         additional_paths:
+          send: ecmp
           send_ecmp_limit: 42
       - ip_address: 172.31.255.4
         activate: true
         additional_paths:
+          send: limit
           send_limit: 42
