--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
@@ -75,8 +75,7 @@ router_bgp:
       route_map: RM-CONN-2-BGP
   address_family_evpn:
     bgp_additional_paths:
-      send:
-        backup: true
+      send: backup
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
         activate: true
