--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -38,8 +38,8 @@ router_bgp:
       peer_group: EVPN-OVERLAY-PEERS
   address_family_evpn:
     bgp_additional_paths:
-      send:
-        limit: 10
+      send: limit
+      send_limit: 10
     next_hop_mpls_resolution_ribs:
       - rib_type: "tunnel-rib-colored"
       - rib_type: "tunnel-rib"
