--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3A.cfg
@@ -201,6 +201,7 @@ interface Ethernet1
 interface Ethernet52
    description DIRECT LAN HA LINK
    no shutdown
+   mtu 9194
    no switchport
    ip address 10.10.10.0/31
 !
