--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -211,6 +211,7 @@ interface Ethernet2
 interface Ethernet52
    description DIRECT LAN HA LINK
    no shutdown
+   mtu 9194
    no switchport
    ip address 10.10.10.1/31
 !
