--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
@@ -165,6 +165,7 @@ ethernet_interfaces:
   description: DIRECT LAN HA LINK
   ip_address: 10.10.10.0/31
   flow_tracker: null
+  mtu: 9194
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
