--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -706,7 +706,7 @@ interface Ethernet68
 interface Ethernet68.1
    description Test_encapsulation_vlan1
    encapsulation vlan
-      client dot1q outer 23 inner 45 network dot1ad outer 32 inner 54
+      client dot1q outer 23 inner dot1q 45 network dot1ad outer 32 inner dot1ad 54
 !
 interface Ethernet68.2
    description Test_encapsulation_vlan2
