--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-evpn.cfg
@@ -100,7 +100,7 @@ router bgp 65101
       domain identifier 65101:0
       neighbor ADDITIONAL-PATH-PG-1 activate
       neighbor ADDITIONAL-PATH-PG-1 additional-paths receive
-      neighbor ADDITIONAL-PATH-PG-1 additional-paths send any PL1
+      neighbor ADDITIONAL-PATH-PG-1 additional-paths send any
       neighbor ADDITIONAL-PATH-PG-2 activate
       neighbor ADDITIONAL-PATH-PG-2 additional-paths send backup
       neighbor ADDITIONAL-PATH-PG-3 activate
@@ -110,6 +110,7 @@ router bgp 65101
       neighbor ADDITIONAL-PATH-PG-5 activate
       neighbor ADDITIONAL-PATH-PG-5 additional-paths send limit 42
       neighbor ADDITIONAL-PATH-PG-6 activate
+      no neighbor ADDITIONAL-PATH-PG-6 additional-paths send any
       neighbor EVPN-OVERLAY-PEERS default-route
       neighbor EVPN-OVERLAY-PEERS activate
       neighbor EVPN-OVERLAY-PEERS domain remote
