Flip default of shutdown_bgp_towards_undeployed_peers & shutdown_interfaces_towards_undeployed_peers

--- a/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-L2LEAF2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-L2LEAF2B.cfg
@@ -96,12 +96,12 @@ interface Port-Channel3
 !
 interface Ethernet1
    description DC1-SVC3A_Ethernet8
-   no shutdown
+   shutdown
    channel-group 1 mode active
 !
 interface Ethernet2
    description DC1-SVC3B_Ethernet8
-   no shutdown
+   shutdown
    channel-group 1 mode active
 !
 interface Ethernet3
