--- a/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-L2LEAF2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-L2LEAF2A.cfg
@@ -96,12 +96,12 @@ interface Port-Channel3
 !
 interface Ethernet1
    description DC1-SVC3A_Ethernet7
-   no shutdown
+   shutdown
    channel-group 1 mode active
 !
 interface Ethernet2
    description DC1-SVC3B_Ethernet7
-   no shutdown
+   shutdown
    channel-group 1 mode active
 !
 interface Ethernet3
