--- a/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-SPINE1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/configs/DC1-SPINE1.cfg
@@ -49,14 +49,14 @@ interface Ethernet3
 !
 interface Ethernet4
    description P2P_LINK_TO_DC1-SVC3A_Ethernet1
-   no shutdown
+   shutdown
    mtu 1500
    no switchport
    ip address 172.31.255.24/31
 !
 interface Ethernet5
    description P2P_LINK_TO_DC1-SVC3B_Ethernet1
-   no shutdown
+   shutdown
    mtu 1500
    no switchport
    ip address 172.31.255.32/31
@@ -129,9 +129,11 @@ router bgp 65001
    neighbor 172.31.255.17 description DC1-LEAF2B_Ethernet1
    neighbor 172.31.255.25 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.31.255.25 remote-as 65103
+   neighbor 172.31.255.25 shutdown
    neighbor 172.31.255.25 description DC1-SVC3A_Ethernet1
    neighbor 172.31.255.33 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.31.255.33 remote-as 65103
+   neighbor 172.31.255.33 shutdown
    neighbor 172.31.255.33 description DC1-SVC3B_Ethernet1
    neighbor 172.31.255.41 peer group IPv4-UNDERLAY-PEERS
    neighbor 172.31.255.41 remote-as 65104
@@ -150,9 +152,11 @@ router bgp 65001
    neighbor 192.168.255.7 description DC1-LEAF2B
    neighbor 192.168.255.8 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.8 remote-as 65103
+   neighbor 192.168.255.8 shutdown
    neighbor 192.168.255.8 description DC1-SVC3A
    neighbor 192.168.255.9 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.9 remote-as 65103
+   neighbor 192.168.255.9 shutdown
    neighbor 192.168.255.9 description DC1-SVC3B
    neighbor 192.168.255.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.10 remote-as 65104
