--- a/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/structured_configs/DC1-SPINE1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/intended/structured_configs/DC1-SPINE1.yml
@@ -58,11 +58,13 @@ router_bgp:
     remote_as: '65103'
     peer: DC1-SVC3A
     description: DC1-SVC3A_Ethernet1
+    shutdown: true
   - ip_address: 172.31.255.33
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65103'
     peer: DC1-SVC3B
     description: DC1-SVC3B_Ethernet1
+    shutdown: true
   - ip_address: 172.31.255.41
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65104'
@@ -103,11 +105,13 @@ router_bgp:
     peer: DC1-SVC3A
     description: DC1-SVC3A
     remote_as: '65103'
+    shutdown: true
   - ip_address: 192.168.255.9
     peer_group: EVPN-OVERLAY-PEERS
     peer: DC1-SVC3B
     description: DC1-SVC3B
     remote_as: '65103'
+    shutdown: true
   address_family_evpn:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
@@ -211,7 +215,7 @@ ethernet_interfaces:
   peer_interface: Ethernet1
   peer_type: l3leaf
   description: P2P_LINK_TO_DC1-SVC3A_Ethernet1
-  shutdown: false
+  shutdown: true
   mtu: 1500
   type: routed
   ip_address: 172.31.255.24/31
@@ -220,7 +224,7 @@ ethernet_interfaces:
   peer_interface: Ethernet1
   peer_type: l3leaf
   description: P2P_LINK_TO_DC1-SVC3B_Ethernet1
-  shutdown: false
+  shutdown: true
   mtu: 1500
   type: routed
   ip_address: 172.31.255.32/31
