--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -594,20 +594,20 @@ ethernet_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1q
-        outer: 400
-        inner: 20
+        outer_vlan: 400
+        inner_vlan: 20
       network:
         protocol: dot1q
-        outer: 401
-        inner: 21
+        outer_vlan: 401
+        inner_vlan: 21
 
   - name: Ethernet26.500
     description: TENANT_A pseudowire 3 interface
     encapsulation_vlan:
       client:
         protocol: dot1q
-        outer: 500
-        inner: 50
+        outer_vlan: 500
+        inner_vlan: 50
       network:
         protocol: client
 
@@ -1200,14 +1200,14 @@ ethernet_interfaces:
     description: Test_encapsulation_vlan1
     encapsulation_vlan:
       client:
-        outer: 23
-        inner: 45
+        outer_vlan: 23
+        inner_vlan: 45
         protocol: dot1q
         inner_protocol: dot1q
       network:
         protocol: dot1ad
-        outer: 32
-        inner: 54
+        outer_vlan: 32
+        inner_vlan: 54
         inner_protocol: dot1ad
 
   - name: Ethernet68.2
@@ -1218,8 +1218,8 @@ ethernet_interfaces:
         vlan: 10
       network:
         protocol: dot1q
-        outer: 32
-        inner: 54
+        outer_vlan: 32
+        inner_vlan: 54
 
   - name: Ethernet68.3
     description: Test_encapsulation_vlan3
@@ -1236,13 +1236,13 @@ ethernet_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
         inner_protocol: dot1q
       network:
         protocol: dot1q
-        outer: 53
-        inner: 6
+        outer_vlan: 53
+        inner_vlan: 6
         inner_protocol: dot1ad
 
   - name: Ethernet68.5
@@ -1250,20 +1250,20 @@ ethernet_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
       network:
         protocol: dot1ad
-        outer: 52
-        inner: 62
+        outer_vlan: 52
+        inner_vlan: 62
 
   - name: Ethernet68.6
     description: Test_encapsulation_vlan6
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
       network:
         protocol: client
 
@@ -1274,8 +1274,8 @@ ethernet_interfaces:
         protocol: untagged
       network:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
 
   - name: Ethernet68.8
     description: Test_encapsulation_vlan8
@@ -1284,8 +1284,8 @@ ethernet_interfaces:
         protocol: untagged
       network:
         protocol: dot1q
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
 
   - name: Ethernet68.9
     description: Test_encapsulation_vlan9
@@ -1300,7 +1300,7 @@ ethernet_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1q
-        outer: 14
-        inner: 11
+        outer_vlan: 14
+        inner_vlan: 11
       network:
         protocol: client inner
