--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -480,12 +480,12 @@ port_channel_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1q
-        outer: 400
-        inner: 20
+        outer_vlan: 400
+        inner_vlan: 20
       network:
         protocol: dot1q
-        outer: 401
-        inner: 21
+        outer_vlan: 401
+        inner_vlan: 21
 
   - name: Port-Channel111.1000
     description: L2 Subinterface
@@ -615,14 +615,14 @@ port_channel_interfaces:
     description: Test_encapsulation_vlan1
     encapsulation_vlan:
       client:
-        outer: 23
-        inner: 45
+        outer_vlan: 23
+        inner_vlan: 45
         protocol: dot1q
         inner_protocol: dot1q
       network:
         protocol: dot1ad
-        outer: 32
-        inner: 54
+        outer_vlan: 32
+        inner_vlan: 54
         inner_protocol: dot1ad
 
   - name: Port-Channel131.2
@@ -633,8 +633,8 @@ port_channel_interfaces:
         vlan: 10
       network:
         protocol: dot1q
-        outer: 32
-        inner: 54
+        outer_vlan: 32
+        inner_vlan: 54
 
   - name: Port-Channel131.3
     description: Test_encapsulation_vlan3
@@ -651,13 +651,13 @@ port_channel_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
         inner_protocol: dot1q
       network:
         protocol: dot1q
-        outer: 53
-        inner: 6
+        outer_vlan: 53
+        inner_vlan: 6
         inner_protocol: dot1ad
 
   - name: Port-Channel131.5
@@ -665,20 +665,20 @@ port_channel_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
       network:
         protocol: dot1ad
-        outer: 52
-        inner: 62
+        outer_vlan: 52
+        inner_vlan: 62
 
   - name: Port-Channel131.6
     description: Test_encapsulation_vlan6
     encapsulation_vlan:
       client:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
       network:
         protocol: client
 
@@ -689,8 +689,8 @@ port_channel_interfaces:
         protocol: untagged
       network:
         protocol: dot1ad
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
 
   - name: Port-Channel131.8
     description: Test_encapsulation_vlan8
@@ -699,8 +699,8 @@ port_channel_interfaces:
         protocol: untagged
       network:
         protocol: dot1q
-        outer: 35
-        inner: 60
+        outer_vlan: 35
+        inner_vlan: 60
 
   - name: Port-Channel131.9
     description: Test_encapsulation_vlan9
@@ -715,8 +715,8 @@ port_channel_interfaces:
     encapsulation_vlan:
       client:
         protocol: dot1q
-        outer: 14
-        inner: 11
+        outer_vlan: 14
+        inner_vlan: 11
       network:
         protocol: client inner
 
