adding a knob to include redistribute igmp if needed

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
@@ -519,6 +519,7 @@ router bgp 65106
    vlan 1
       rd 192.168.255.8:10001
       route-target both 10001:10001
+      redistribute igmp
       redistribute learned
    !
    vlan 110
@@ -559,6 +560,7 @@ router bgp 65106
    vlan 2
       rd 192.168.255.8:10002
       route-target both 10002:10002
+      redistribute igmp
       redistribute learned
    !
    vlan 210
@@ -626,6 +628,7 @@ router bgp 65106
    vlan 3
       rd 192.168.255.8:10003
       route-target both 10003:10003
+      redistribute igmp
       redistribute learned
    !
    vlan 310
