--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
@@ -612,6 +612,7 @@ router bgp 65104
    vlan 1
       rd 192.168.255.6:10001
       route-target both 10001:10001
+      redistribute igmp
       redistribute learned
    !
    vlan 110
@@ -652,6 +653,7 @@ router bgp 65104
    vlan 2
       rd 192.168.255.6:10002
       route-target both 10002:10002
+      redistribute igmp
       redistribute learned
    !
    vlan 210
@@ -719,6 +721,7 @@ router bgp 65104
    vlan 3
       rd 192.168.255.6:10003
       route-target both 10003:10003
+      redistribute igmp
       redistribute learned
    !
    vlan 310
