--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF2A.cfg
@@ -590,6 +590,7 @@ router bgp 65103
    vlan 1
       rd 192.168.255.5:10001
       route-target both 10001:10001
+      redistribute igmp
       redistribute learned
    !
    vlan 110
@@ -630,6 +631,7 @@ router bgp 65103
    vlan 2
       rd 192.168.255.5:10002
       route-target both 10002:10002
+      redistribute igmp
       redistribute learned
    !
    vlan 210
@@ -697,6 +699,7 @@ router bgp 65103
    vlan 3
       rd 192.168.255.5:10003
       route-target both 10003:10003
+      redistribute igmp
       redistribute learned
    !
    vlan 310
