--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-DISABLED.yml
@@ -357,6 +357,7 @@ router_bgp:
       - 10001:10001
     redistribute_routes:
     - learned
+    - igmp
   - id: 2
     tenant: Tenant_B
     rd: 192.168.255.8:10002
@@ -365,6 +366,7 @@ router_bgp:
       - 10002:10002
     redistribute_routes:
     - learned
+    - igmp
   - id: 3
     tenant: Tenant_B
     rd: 192.168.255.8:10003
@@ -373,6 +375,7 @@ router_bgp:
       - 10003:10003
     redistribute_routes:
     - learned
+    - igmp
   - id: 4
     tenant: Tenant_B
     rd: 192.168.255.8:10004
