--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
@@ -366,6 +366,7 @@ router_bgp:
       - 10001:10001
     redistribute_routes:
     - learned
+    - igmp
   - id: 2
     tenant: Tenant_B
     rd: 192.168.255.5:10002
@@ -374,6 +375,7 @@ router_bgp:
       - 10002:10002
     redistribute_routes:
     - learned
+    - igmp
   - id: 3
     tenant: Tenant_B
     rd: 192.168.255.5:10003
@@ -382,6 +384,7 @@ router_bgp:
       - 10003:10003
     redistribute_routes:
     - learned
+    - igmp
   - id: 4
     tenant: Tenant_B
     rd: 192.168.255.5:10004
