--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
@@ -114,6 +114,7 @@ tenants:
       enabled: false
       underlay_l2_multicast_group_ipv4_pool: 232.0.16.0/20
       underlay_l2_multicast_group_ipv4_pool_offset: 1
+      redistribute_igmp_vrf: true
     igmp_snooping_querier:
       version: 3
       source_address: 1.1.1.1
