--- a/ansible_collections/arista/avd/roles/eos_designs/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/tasks/main.yml
@@ -3,9 +3,8 @@
 # that can be found in the LICENSE file.
 ---
 - name: Verify Requirements
-  tags: [always, avd_req]
   delegate_to: localhost
-  when: avd_requirements is not defined
+  when: avd_requirements is not defined and avd_verify_requirements | default(true)
   arista.avd.verify_requirements:
     requirements: "{{ lookup('file', requirements_path ~ '/requirements.txt').splitlines() }}"
     avd_ignore_requirements: "{{ avd_ignore_requirements | default(false) }}"
@@ -15,7 +14,7 @@
   register: avd_requirements
 
 - name: Create required output directories if not present
-  tags: [build, provision]
+  when: avd_create_directories | default(true)
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -27,7 +26,7 @@
   run_once: true
 
 - name: Set eos_designs facts
-  tags: [build, provision, facts]
+  when: avd_eos_designs_facts | default(true)
   arista.avd.eos_designs_facts:
     avd_switch_facts: true
     # cprofile_file: "eos_designs_facts.prof"
@@ -37,7 +36,7 @@
   run_once: true
 
 - name: Generate YAML file with hostvars (only for debugging)
-  tags: [debug, never]
+  when: avd_eos_designs_debug | default(false)
   ansible.builtin.template:
     src: debug/generate-debug-vars.j2
     dest: "{{ structured_dir }}/{{ inventory_hostname }}-debug-vars.yml"
@@ -46,7 +45,7 @@
   changed_when: false
 
 - name: Generate device configuration in structured format
-  tags: [build, provision]
+  when: avd_eos_designs_structured_config | default(true)
   arista.avd.eos_designs_structured_config:
     eos_designs_custom_templates: "{{ eos_designs_custom_templates | arista.avd.default([]) }}"
     dest: "{{ structured_dir }}/{{ inventory_hostname }}.{{ avd_structured_config_file_format }}"
@@ -58,7 +57,9 @@
   register: structured_config
 
 - name: Generate fabric documentation
-  tags: [build, provision, documentation]
+  when: eos_designs_documentation.enabled | arista.avd.default(true)
+        or eos_designs_documentation.topology_csv | arista.avd.default(false)
+        or eos_designs_documentation.p2p_links_csv | arista.avd.default(false)
   arista.avd.eos_designs_documentation:
     structured_config_dir: "{{ structured_dir }}"
     structured_config_suffix: "{{ avd_structured_config_file_format }}"
@@ -66,16 +67,16 @@
     fabric_documentation: "{{ eos_designs_documentation.enabled | arista.avd.default(true) }}"
     include_connected_endpoints: "{{ eos_designs_documentation.connected_endpoints | arista.avd.default(false) }}"
     topology_csv_file: "{{ fabric_dir }}/{{ fabric_name }}-topology.csv"
-    topology_csv: "{{ eos_designs_documentation.topology_csv | arista.avd.default(true) }}"
+    topology_csv: "{{ eos_designs_documentation.topology_csv | arista.avd.default(false) }}"
     p2p_links_csv_file: "{{ fabric_dir }}/{{ fabric_name }}-p2p-links.csv"
-    p2p_links_csv: "{{ eos_designs_documentation.p2p_links_csv | arista.avd.default(true) }}"
+    p2p_links_csv: "{{ eos_designs_documentation.p2p_links_csv | arista.avd.default(false) }}"
     mode: "0o664"
   delegate_to: localhost
   check_mode: false
   run_once: true
 
 - name: Remove avd_switch_facts
-  tags: [build, provision, facts, remove_avd_switch_facts]
+  when: avd_eos_designs_facts | default(true) and avd_eos_designs_unset_facts | default(true)
   arista.avd.set_vars:
     avd_switch_facts: null
     avd_overlay_peers: null
