--- a/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/inventory/group_vars/AVD_LAB.yml
+++ b/ansible_collections/arista/avd/molecule/eos_config_deploy_cvp/inventory/group_vars/AVD_LAB.yml
@@ -1,3 +1,6 @@
+# Run tests without interacting with CVP.
+avd_eos_config_deploy_cvp_provision: false
+
 # Nashua EVE-NG LAB shared attributes
 root_dir: '{{ playbook_dir }}'
 
