checking for _evpn_l3_multicast_enabled

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF2A.cfg
@@ -596,11 +596,13 @@ router bgp 65103
    vlan 110
       rd 192.168.255.5:10110
       route-target both 10110:10110
+      redistribute igmp
       redistribute learned
    !
    vlan 111
       rd 192.168.255.5:10111
       route-target both 10111:10111
+      redistribute igmp
       redistribute learned
    !
    vlan 130
@@ -637,6 +639,7 @@ router bgp 65103
    vlan 210
       rd 192.168.255.5:10210
       route-target both 10210:10210
+      redistribute igmp
       redistribute learned
    !
    vlan 211
