--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3B.cfg
@@ -618,11 +618,13 @@ router bgp 65105
    vlan 110
       rd 192.168.255.7:10110
       route-target both 10110:10110
+      redistribute igmp
       redistribute learned
    !
    vlan 111
       rd 192.168.255.7:10111
       route-target both 10111:10111
+      redistribute igmp
       redistribute learned
    !
    vlan 130
@@ -659,6 +661,7 @@ router bgp 65105
    vlan 210
       rd 192.168.255.7:10210
       route-target both 10210:10210
+      redistribute igmp
       redistribute learned
    !
    vlan 211
