--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF3B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF3B.yml
@@ -298,6 +298,7 @@ router_bgp:
       - 10110:10110
     redistribute_routes:
     - learned
+    - igmp
   - id: 111
     tenant: Tenant_A
     rd: 192.168.255.7:10111
@@ -306,6 +307,7 @@ router_bgp:
       - 10111:10111
     redistribute_routes:
     - learned
+    - igmp
   - id: 210
     tenant: Tenant_A
     rd: 192.168.255.7:10210
@@ -314,6 +316,7 @@ router_bgp:
       - 10210:10210
     redistribute_routes:
     - learned
+    - igmp
   - id: 211
     tenant: Tenant_A
     rd: 192.168.255.7:10211
