--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-DISABLED.cfg
@@ -525,11 +525,13 @@ router bgp 65106
    vlan 110
       rd 192.168.255.8:10110
       route-target both 10110:10110
+      redistribute igmp
       redistribute learned
    !
    vlan 111
       rd 192.168.255.8:10111
       route-target both 10111:10111
+      redistribute igmp
       redistribute learned
    !
    vlan 130
@@ -566,6 +568,7 @@ router bgp 65106
    vlan 210
       rd 192.168.255.8:10210
       route-target both 10210:10210
+      redistribute igmp
       redistribute learned
    !
    vlan 211
