--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF2A.yml
@@ -292,6 +292,7 @@ router_bgp:
       - 10110:10110
     redistribute_routes:
     - learned
+    - igmp
   - id: 111
     tenant: Tenant_A
     rd: 192.168.255.5:10111
@@ -300,6 +301,7 @@ router_bgp:
       - 10111:10111
     redistribute_routes:
     - learned
+    - igmp
   - id: 210
     tenant: Tenant_A
     rd: 192.168.255.5:10210
@@ -308,6 +310,7 @@ router_bgp:
       - 10210:10210
     redistribute_routes:
     - learned
+    - igmp
   - id: 211
     tenant: Tenant_A
     rd: 192.168.255.5:10211
