--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1A.cfg
@@ -39,6 +39,14 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan none
+   switchport mode trunk
+   mlag 5
+!
 interface Ethernet1
    description TEST_CUSTOM_PREFIX_P2P_LINK_TO_CUSTOM-TEMPLATES-SPINE1_Ethernet1
    no shutdown
@@ -55,6 +63,11 @@ interface Ethernet4
    description TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1B_Ethernet4
    no shutdown
    channel-group 3 mode active
+!
+interface Ethernet5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet1
+   no shutdown
+   channel-group 5 mode active
 !
 interface Ethernet11
    description TEST_CUSTOM_PREFIX_SERVER-1_Nic1
