--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
@@ -39,6 +39,14 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan none
+   switchport mode trunk
+   mlag 5
+!
 interface Port-Channel12
    description TEST_CUSTOM_PREFIX_SERVER-2_portchannel
    no shutdown
@@ -61,6 +69,11 @@ interface Ethernet4
    description TEST_CUSTOM_PREFIX_MLAG_PEER_CUSTOM-TEMPLATES-L3LEAF1A_Ethernet4
    no shutdown
    channel-group 3 mode active
+!
+interface Ethernet5
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet2
+   no shutdown
+   channel-group 5 mode active
 !
 interface Ethernet12
    description TEST_CUSTOM_PREFIX_SERVER-2_Nic1
