--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/CUSTOM-TEMPLATES-L3LEAF1A.yml
@@ -184,6 +184,13 @@ port_channel_interfaces:
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
+- name: Port-Channel5
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1
+  type: switched
+  shutdown: false
+  mode: trunk
+  vlans: none
+  mlag: 5
 ethernet_interfaces:
 - name: Ethernet3
   peer: CUSTOM-TEMPLATES-L3LEAF1B
@@ -214,6 +221,16 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 172.31.255.21/31
+- name: Ethernet5
+  peer: CUSTOM-TEMPLATES-L2LEAF1A
+  peer_interface: Ethernet1
+  peer_type: l2leaf
+  description: TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet1
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 5
+    mode: active
 - name: Ethernet11
   peer: SERVER-1
   peer_interface: Nic1
