--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -190,6 +190,9 @@ all:
               hosts:
                 CUSTOM-TEMPLATES-L3LEAF1A:
                 CUSTOM-TEMPLATES-L3LEAF1B:
+            CUSTOM_TEMPLATES_L2LEAFS:
+              hosts:
+                CUSTOM-TEMPLATES-L2LEAF1A:
         CUSTOM_PYTHON_MODULES_TESTS:
           children:
             CUSTOM_PYTHON_MODULES_SPINES:
