Do not generate csv by default

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/group_vars/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/group_vars/all.yml
@@ -2,5 +2,5 @@
 root_dir: '{{ playbook_dir }}'
 
 eos_designs_documentation:
-  enabled: false
+  enable: false
 generate_device_documentation: false
