--- a/ansible_collections/arista/avd/roles/eos_designs/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/tasks/main.yml
@@ -57,14 +57,14 @@
   register: structured_config
 
 - name: Generate fabric documentation
-  when: eos_designs_documentation.enabled | arista.avd.default(true)
+  when: eos_designs_documentation.enable | arista.avd.default(true)
         or eos_designs_documentation.topology_csv | arista.avd.default(false)
         or eos_designs_documentation.p2p_links_csv | arista.avd.default(false)
   arista.avd.eos_designs_documentation:
     structured_config_dir: "{{ structured_dir }}"
     structured_config_suffix: "{{ avd_structured_config_file_format }}"
     fabric_documentation_file: "{{ fabric_dir }}/{{ fabric_name }}-documentation.md"
-    fabric_documentation: "{{ eos_designs_documentation.enabled | arista.avd.default(true) }}"
+    fabric_documentation: "{{ eos_designs_documentation.enable | arista.avd.default(true) }}"
     include_connected_endpoints: "{{ eos_designs_documentation.connected_endpoints | arista.avd.default(false) }}"
     topology_csv_file: "{{ fabric_dir }}/{{ fabric_name }}-topology.csv"
     topology_csv: "{{ eos_designs_documentation.topology_csv | arista.avd.default(false) }}"
@@ -76,7 +76,8 @@
   run_once: true
 
 - name: Remove avd_switch_facts
-  when: avd_eos_designs_facts | default(true) and avd_eos_designs_unset_facts | default(true)
+  when: avd_eos_designs_facts | default(true)
+        and avd_eos_designs_unset_facts | default(true)
   arista.avd.set_vars:
     avd_switch_facts: null
     avd_overlay_peers: null
