--- a/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/inventory/group_vars/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_deprecated_vars/inventory/group_vars/all.yml
@@ -5,5 +5,5 @@ is_for_test: true
 fabric_name: EOS_DESIGNS_DEPRECATED_VARS
 
 eos_designs_documentation:
-  enabled: false
+  enable: false
 generate_device_documentation: false
