Feat(eos_cli_config_gen): Enhance encapsulation schema/template for ethernet and port-channel interfaces (#4388)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -345,6 +345,7 @@ interface Ethernet26.1
 !
 interface Ethernet26.100
    description TENANT_A pseudowire 1 interface
+   vlan id 10
    encapsulation vlan
       client dot1q 100 network client
 !
@@ -361,12 +362,12 @@ interface Ethernet26.300
 interface Ethernet26.400
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
-      client dot1q outer 400 inner 20 network dot1q outer 21 inner 401
+      client dot1q outer 400 inner 20 network dot1q outer 401 inner 21
 !
 interface Ethernet26.500
    description TENANT_A pseudowire 3 interface
    encapsulation vlan
-      client dot1q outer 500 inner 50
+      client dot1q outer 500 inner 50 network client
 !
 interface Ethernet27
    description EVPN-Vxlan single-active redundancy
@@ -691,12 +692,66 @@ interface Ethernet67
    switchport
    transceiver frequency 190050.000
 !
+interface Ethernet67.1
+   description Test_encapsulation_dot1q
+   encapsulation dot1q vlan 4 inner 34
+!
 interface Ethernet68
    description Custom_Transceiver_Frequency
    no shutdown
    switchport
    transceiver media override 100gbase-ar4
    transceiver frequency 190080.000 ghz
+!
+interface Ethernet68.1
+   description Test_encapsulation_vlan1
+   encapsulation vlan
+      client dot1q outer 23 inner dot1q 45 network dot1ad outer 32 inner dot1ad 54
+!
+interface Ethernet68.2
+   description Test_encapsulation_vlan2
+   encapsulation vlan
+      client dot1q 10 network dot1q outer 32 inner 54
+!
+interface Ethernet68.3
+   description Test_encapsulation_vlan3
+   encapsulation vlan
+      client dot1ad 12 network dot1q 25
+!
+interface Ethernet68.4
+   description Test_encapsulation_vlan4
+   encapsulation vlan
+      client dot1ad outer 35 inner dot1q 60 network dot1q outer 53 inner dot1ad 6
+!
+interface Ethernet68.5
+   description Test_encapsulation_vlan5
+   encapsulation vlan
+      client dot1ad outer 35 inner 60 network dot1ad outer 52 inner 62
+!
+interface Ethernet68.6
+   description Test_encapsulation_vlan6
+   encapsulation vlan
+      client dot1ad outer 35 inner 60 network client
+!
+interface Ethernet68.7
+   description Test_encapsulation_vlan7
+   encapsulation vlan
+      client untagged network dot1ad outer 35 inner 60
+!
+interface Ethernet68.8
+   description Test_encapsulation_vlan8
+   encapsulation vlan
+      client untagged network dot1q outer 35 inner 60
+!
+interface Ethernet68.9
+   description Test_encapsulation_vlan9
+   encapsulation vlan
+      client untagged network untagged
+!
+interface Ethernet68.10
+   description Test_encapsulation_vlan9
+   encapsulation vlan
+      client dot1q outer 14 inner 11 network client inner
 !
 interface Ethernet69
    description IP NAT service-profile
