--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -378,8 +378,8 @@ ethernet_interfaces:
 
   - name: Ethernet8.101
     description: to WAN-ISP-01 Ethernet2.101 - VRF-C1
-    type: l3dot1q
-    encapsulation_dot1q_vlan: 101
+    encapsulation_dot1q:
+      vlan: 101
     ip_address: 172.31.128.1/31
     ipv6_enable: true
     ipv6_address: 2002:ABDC::1/64
@@ -557,64 +557,59 @@ ethernet_interfaces:
     type: routed
 
   - name: Ethernet26.1
-    type: l2dot1q
     description: TENANT_A pseudowire 1 interface
     encapsulation_vlan:
       client:
-        unmatched: true
+        protocol: unmatched
 
   - name: Ethernet26.100
-    type: l2dot1q
     description: TENANT_A pseudowire 1 interface
+    vlan_id: 10
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 100
+        protocol: dot1q
+        vlan: 100
       network:
-        client: true
+        protocol: client
 
   - name: Ethernet26.200
-    type: l2dot1q
     description: TENANT_A pseudowire 2 interface
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 200
+        protocol: dot1q
+        vlan: 200
 
   - name: Ethernet26.300
-    type: l2dot1q
     description: TENANT_A pseudowire 3 interface
     encapsulation_vlan:
       client:
-        dot1q:
-          vlan: 300
+        protocol: dot1q
+        vlan: 300
       network:
-        dot1q:
-          vlan: 400
+        protocol: dot1q
+        vlan: 400
 
   - name: Ethernet26.400
-    type: l2dot1q
     description: TENANT_A pseudowire 3 interface
     encapsulation_vlan:
       client:
-        dot1q:
-          outer: 400
-          inner: 20
+        protocol: dot1q
+        outer_vlan: 400
+        inner_vlan: 20
       network:
-        dot1q:
-          outer: 401
-          inner: 21
+        protocol: dot1q
+        outer_vlan: 401
+        inner_vlan: 21
 
   - name: Ethernet26.500
-    type: l2dot1q
     description: TENANT_A pseudowire 3 interface
     encapsulation_vlan:
       client:
-        dot1q:
-          outer: 500
-          inner: 50
+        protocol: dot1q
+        outer_vlan: 500
+        inner_vlan: 50
       network:
-        client: true
+        protocol: client
 
   - name: Ethernet27
     type: switched
@@ -1185,6 +1180,12 @@ ethernet_interfaces:
     transceiver:
       frequency: 190050
 
+  - name: Ethernet67.1
+    description: Test_encapsulation_dot1q
+    encapsulation_dot1q:
+      vlan: 4
+      inner_vlan: 34
+
   - name: Ethernet68
     type: switched
     description: Custom_Transceiver_Frequency
@@ -1194,3 +1195,112 @@ ethernet_interfaces:
       frequency_unit: ghz
       media:
         override: 100gbase-ar4
+
+  - name: Ethernet68.1
+    description: Test_encapsulation_vlan1
+    encapsulation_vlan:
+      client:
+        outer_vlan: 23
+        inner_vlan: 45
+        protocol: dot1q
+        inner_protocol: dot1q
+      network:
+        protocol: dot1ad
+        outer_vlan: 32
+        inner_vlan: 54
+        inner_protocol: dot1ad
+
+  - name: Ethernet68.2
+    description: Test_encapsulation_vlan2
+    encapsulation_vlan:
+      client:
+        protocol: dot1q
+        vlan: 10
+      network:
+        protocol: dot1q
+        outer_vlan: 32
+        inner_vlan: 54
+
+  - name: Ethernet68.3
+    description: Test_encapsulation_vlan3
+    encapsulation_vlan:
+      client:
+        protocol: dot1ad
+        vlan: 12
+      network:
+        protocol: dot1q
+        vlan: 25
+
+  - name: Ethernet68.4
+    description: Test_encapsulation_vlan4
+    encapsulation_vlan:
+      client:
+        protocol: dot1ad
+        outer_vlan: 35
+        inner_vlan: 60
+        inner_protocol: dot1q
+      network:
+        protocol: dot1q
+        outer_vlan: 53
+        inner_vlan: 6
+        inner_protocol: dot1ad
+
+  - name: Ethernet68.5
+    description: Test_encapsulation_vlan5
+    encapsulation_vlan:
+      client:
+        protocol: dot1ad
+        outer_vlan: 35
+        inner_vlan: 60
+      network:
+        protocol: dot1ad
+        outer_vlan: 52
+        inner_vlan: 62
+
+  - name: Ethernet68.6
+    description: Test_encapsulation_vlan6
+    encapsulation_vlan:
+      client:
+        protocol: dot1ad
+        outer_vlan: 35
+        inner_vlan: 60
+      network:
+        protocol: client
+
+  - name: Ethernet68.7
+    description: Test_encapsulation_vlan7
+    encapsulation_vlan:
+      client:
+        protocol: untagged
+      network:
+        protocol: dot1ad
+        outer_vlan: 35
+        inner_vlan: 60
+
+  - name: Ethernet68.8
+    description: Test_encapsulation_vlan8
+    encapsulation_vlan:
+      client:
+        protocol: untagged
+      network:
+        protocol: dot1q
+        outer_vlan: 35
+        inner_vlan: 60
+
+  - name: Ethernet68.9
+    description: Test_encapsulation_vlan9
+    encapsulation_vlan:
+      client:
+        protocol: untagged
+      network:
+        protocol: untagged
+
+  - name: Ethernet68.10
+    description: Test_encapsulation_vlan9
+    encapsulation_vlan:
+      client:
+        protocol: dot1q
+        outer_vlan: 14
+        inner_vlan: 11
+      network:
+        protocol: client inner
