--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -1,9 +1,11 @@
 !
 interface Port-Channel2
+   description Test_mode_and_vlans
    switchport
    switchport access vlan 100
 !
 interface Port-Channel3
+   description Test_trunk_groups_and_native_vlan
    switchport
    switchport trunk allowed vlan 110
    switchport trunk native vlan 10
@@ -12,6 +14,7 @@ interface Port-Channel3
    switchport trunk group group2
 !
 interface Port-Channel4
+   description Test_native_vlan_tag_and_phone
    switchport
    switchport trunk native vlan tag
    switchport phone vlan 20
@@ -19,6 +22,7 @@ interface Port-Channel4
    switchport mode trunk phone
 !
 interface Port-Channel5
+   description Test_vlan_translations
    switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
@@ -26,12 +30,39 @@ interface Port-Channel5
    switchport vlan translation out 25 49
    switchport vlan translation 34 60
 !
+interface Port-Channel6
+   description Test_encapsulation_dot1q_vlan
+   encapsulation dot1q vlan 20
+!
+interface Port-Channel7
+   description Test_encapsulation_vlan1
+   encapsulation vlan
+      client dot1q 10 network dot1q 20
+!
+interface Port-Channel8
+   description Test_encapsulation_vlan2
+   encapsulation vlan
+      client dot1q outer 10 inner 12
+!
+interface Port-Channel9
+   description Test_encapsulation_vlan3
+   encapsulation vlan
+      client unmatched
+!
+interface Port-Channel10
+   description Test_encapsulation_vlan4
+   vlan id 100
+   encapsulation vlan
+      client dot1q outer 10 inner 12 network dot1q outer 20 inner 22
+!
 interface Ethernet1
+   description Test_mode_and_vlans
    switchport access vlan 100
    switchport mode access
    switchport
 !
 interface Ethernet2
+   description Test_trunk_groups_and_native_vlan
    switchport trunk native vlan 10
    switchport trunk allowed vlan 110
    switchport mode trunk
@@ -40,6 +71,7 @@ interface Ethernet2
    switchport
 !
 interface Ethernet3
+   description Test_native_vlan_tag_and_phone
    switchport trunk native vlan tag
    switchport phone vlan 20
    switchport phone trunk tagged
@@ -47,12 +79,38 @@ interface Ethernet3
    switchport
 !
 interface Ethernet4
+   description Test_vlan_translations
    switchport vlan translation in 23 50
    switchport vlan translation out 25 49
    switchport vlan translation 34 60
    switchport
    switchport trunk private-vlan secondary
    switchport pvlan mapping 2,3,4
+!
+interface Ethernet5
+   description Test_encapsulation_dot1q_vlan
+   encapsulation dot1q vlan 20
+!
+interface Ethernet6
+   description Test_encapsulation_vlan1
+   encapsulation vlan
+      client dot1q 10 network dot1q 20
+!
+interface Ethernet7
+   description Test_encapsulation_vlan2
+   encapsulation vlan
+      client dot1q outer 10 inner 12
+!
+interface Ethernet8
+   description Test_encapsulation_vlan3
+   encapsulation vlan
+      client unmatched
+!
+interface Ethernet9
+   description Test_encapsulation_vlan4
+   vlan id 100
+   encapsulation vlan
+      client dot1q outer 10 inner 12 network dot1q outer 20 inner 22
 !
 ip community-list TEST1 permit 1000:1000
 ip community-list TEST2 permit 2000:3000
