--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/ethernet-interfaces.yml
@@ -1,17 +1,19 @@
-### Port-Channel Interfaces ###
-# Testing deprecated keys for switchport config in port-channel_interfaces
+---
+### Ethernet Interfaces ###
+
+# Testing deprecated keys in ethernet_interfaces
 # The deprecated keys listed below will be removed in AVD6.0.0:
 #     - mode, vlans, native_vlan, native_vlan_tag, trunk_groups, phone, vlan_translations, trunk_private_vlan_secondary, pvlan_mapping
 #     - vlan_id, encapsulation_dot1q_vlan, encapsulation_vlan.client.dot1q, encapsulation_vlan.client.unmatched
 #     - encapsulation_vlan.network.dot1q, encapsulation_vlan.network.client
-port_channel_interfaces:
-  - name: Port-Channel2
+ethernet_interfaces:
+  - name: Ethernet1
     description: Test_mode_and_vlans
     type: switched
     mode: access
     vlans: 100
 
-  - name: Port-Channel3
+  - name: Ethernet2
     description: Test_trunk_groups_and_native_vlan
     type: switched
     mode: trunk
@@ -21,7 +23,7 @@ port_channel_interfaces:
       - group1
       - group2
 
-  - name: Port-Channel4
+  - name: Ethernet3
     description: Test_native_vlan_tag_and_phone
     type: switched
     native_vlan_tag: true
@@ -31,7 +33,7 @@ port_channel_interfaces:
       vlan: 20
       trunk: tagged
 
-  - name: Port-Channel5
+  - name: Ethernet4
     description: Test_vlan_translations
     type: switched
     vlan_translations:
@@ -48,12 +50,12 @@ port_channel_interfaces:
     trunk_private_vlan_secondary: true
     pvlan_mapping: "2,3,4"
 
-  - name: Port-Channel6
+  - name: Ethernet5
     description: Test_encapsulation_dot1q_vlan
     type: l3dot1q
     encapsulation_dot1q_vlan: 20
 
-  - name: Port-Channel7
+  - name: Ethernet6
     description: Test_encapsulation_vlan1
     type: l3dot1q
     encapsulation_vlan:
@@ -64,7 +66,7 @@ port_channel_interfaces:
         dot1q:
           vlan: 20
 
-  - name: Port-Channel8
+  - name: Ethernet7
     description: Test_encapsulation_vlan2
     type: l3dot1q
     encapsulation_vlan:
@@ -75,14 +77,14 @@ port_channel_interfaces:
       network:
         client: true
 
-  - name: Port-Channel9
+  - name: Ethernet8
     description: Test_encapsulation_vlan3
     type: l3dot1q
     encapsulation_vlan:
       client:
         unmatched: true
 
-  - name: Port-Channel10
+  - name: Ethernet9
     description: Test_encapsulation_vlan4
     # test for vlan_id
     vlan_id: 100
