Adding test for shutdown false

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/DC1-SPINE4.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/DC1-SPINE4.yml
@@ -1,4 +1,10 @@
 ---
+# If the device is set to "is_deployed: false" at the host_vars level, then do not shutdown interfaces towards undeployed peers.
+shutdown_interfaces_towards_undeployed_peers: false
+
+# If the device is set to "is_deployed: false" at the host_vars level, then do not shutdown bgp towards undeployed peers.
+shutdown_bgp_towards_undeployed_peers: false
+
 # Testing the suggested method to roll back the change of default platform settings for R3 series.
 custom_platform_settings:
   - platforms:
