--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/CUSTOM-TEMPLATES-L3LEAF1B.cfg
@@ -40,7 +40,7 @@ interface Port-Channel3
    switchport trunk group MLAG
 !
 interface Port-Channel5
-   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Po5_To_Po1_CUSTOM_TEMPLATES_L2LEAF1
    no shutdown
    switchport
    switchport trunk allowed vlan none
@@ -72,6 +72,11 @@ interface Ethernet4
 !
 interface Ethernet5
    description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1A_Ethernet2
+   no shutdown
+   channel-group 5 mode active
+!
+interface Ethernet6
+   description TEST_CUSTOM_PREFIX_CUSTOM-TEMPLATES-L2LEAF1B_Ethernet2
    no shutdown
    channel-group 5 mode active
 !
