--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -193,6 +193,7 @@ all:
             CUSTOM_TEMPLATES_L2LEAFS:
               hosts:
                 CUSTOM-TEMPLATES-L2LEAF1A:
+                CUSTOM-TEMPLATES-L2LEAF1B:
         CUSTOM_PYTHON_MODULES_TESTS:
           children:
             CUSTOM_PYTHON_MODULES_SPINES:
