--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L2LEAF1A.cfg
@@ -49,6 +49,12 @@ vlan 130
 vlan 131
    name L3_MULTICAST_ENABLED_131
 !
+vlan 136
+   name L3_L2_MULTICAST_ENABLED_136
+!
+vlan 137
+   name L3_L2_MULTICAST_ENABLED_137
+!
 vlan 140
    name L3_MULTICAST_ENABLED_140
 !
@@ -118,7 +124,7 @@ interface Port-Channel1
    description EVPN_MULTICAST_L3LEAF1_Po6
    no shutdown
    switchport
-   switchport trunk allowed vlan 1-9,110-111,130-131,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092
+   switchport trunk allowed vlan 1-9,110-111,130-131,136-137,140-141,150,210-211,230-231,240-241,250-252,256-257,260,310-311,330-331,550,4092
    switchport mode trunk
 !
 interface Ethernet1
