--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
@@ -114,7 +114,6 @@ tenants:
       enabled: false
       underlay_l2_multicast_group_ipv4_pool: 232.0.16.0/20
       underlay_l2_multicast_group_ipv4_pool_offset: 1
-      redistribute_igmp_vrf: true
     igmp_snooping_querier:
       version: 3
       source_address: 1.1.1.1
@@ -229,6 +228,9 @@ tenants:
   # Tenant_C is for testing of EVPN L3/OISM only
   - name: Tenant_C
     mac_vrf_vni_base: 10000
+    evpn_l2_multicast:
+      enabled: False
+      underlay_l2_multicast_group_ipv4_pool: 236.0.0.0/20
     evpn_l3_multicast:
       # Enabled =
       #  - Enable multicast-routing on VRF
@@ -279,6 +281,18 @@ tenants:
                 ip_address: 10.1.14.5/24
               - node: EVPN-MULTICAST-L3LEAF3B
                 ip_address: 10.1.14.6/24
+          - id: 136
+            name: "L3_L2_MULTICAST_ENABLED_136"
+            enabled: true
+            evpn_l2_multicast:
+              enabled: true
+              always_redistribute_igmp: true
+          - id: 137
+            name: "L3_L2_MULTICAST_ENABLED_137"
+            enabled: true
+            evpn_l2_multicast:
+              enabled: true
+              always_redistribute_igmp: false
 
       - name: TEN_C_L3_MULTICAST_ENABLED_230_DISABLED_231
         description: "L3_MULTICAST_ENABLED_230_DISABLED_231"
